whitespaces on the sides of landing corrected

--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
 .container-fluid{
     max-width: 100vw !important;
+    padding:0px !important
 }
